@@ -9,6 +9,13 @@ Latest changes:
   * xdelta: Disable build because we don't make use of it
 
 - New tools and hooks:
+    * Add patch that enhances posibilities of /bin/onlinechanged:
+      Based on changes by AVM we execute 3 locations on a call to /bin/onlinechanged:
+      1. /var/tmp/onlinechanged (compatibility to old behaviour) 
+      2. /etc/onlinechanged/*   (new AVM behaviour)
+      3. /tmp/flash/onlinechanged/* 
+      If a package needs actions on changes of online status create a script
+      make/$package/files/root/etc/onlinechanged/$action_$package.
 
 - New patches (read online help for more info):
 
